<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:weightSum="6">

    <ImageButton
        android:id="@+id/button_shrink"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/colorAir"
        android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

    <AutoCompleteTextView
        android:id="@+id/textFormula"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:layout_weight="2.5"
        android:digits="@string/text_formula_filter"
        android:hint="@string/text_formula_hint"
        android:maxLines="1"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/text_volume"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="4dp"
        android:layout_weight="2"
        android:hint="@string/text_volume_hint"
        android:inputType="numberDecimal"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/button_add"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</LinearLayout>